update triangle image to prevent image clipping

--- a/web/src/stylesheets/triangle-canvas.css
+++ b/web/src/stylesheets/triangle-canvas.css
@@ -10,6 +10,6 @@
   background-color: lightgray;
 }
 .canvas {
-  /* width: 100%; */
   overflow-y: auto;
+  background-color: blue;
 }
